# paotui

./: .env  .gitignore  ANDROID_WSL_BUILD_ISSUE.md  Cargo.toml  README-MOBILE.md  biome.json  build.ts  bunfig.toml  dev_server.ts  index.html  package.json  pnpm-lock.yaml  setup-mobile.sh  sqlx.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
examples/load_balancer/: Cargo.toml
examples/load_balancer/src/: main.rs
examples/testing/: Cargo.toml
examples/testing/src/: auth.rs  main.rs
examples/validator/: Cargo.toml
examples/validator/src/: main.rs
plugins/tauri-plugin-txmap/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
plugins/tauri-plugin-txmap/android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle
plugins/tauri-plugin-txmap/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/tauri-plugin-txmap/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-txmap/android/src/main/java/: Example.kt  (+2 more)
plugins/tauri-plugin-txmap/guest-js/: index.ts
plugins/tauri-plugin-txmap/ios/: Package.swift  README.md
plugins/tauri-plugin-txmap/ios/Sources/: ExamplePlugin.swift
plugins/tauri-plugin-txmap/permissions/: default.toml
plugins/tauri-plugin-txmap/permissions/autogenerated/: reference.md
plugins/tauri-plugin-txmap/permissions/autogenerated/commands/: add_task.toml  clear_channel.toml  clear_task.toml  clear_watch_direction.toml  clear_watch_location.toml  fragment.toml  start_tx_map_with_channel.toml  watch_direction.toml  watch_location.toml
plugins/tauri-plugin-txmap/permissions/schemas/: schema.json
plugins/tauri-plugin-txmap/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-axum/: .env  .rustcover.toml  Cargo.toml  Readme.md  environment.yml  mise.toml  rustfmt.toml
src-axum/.cargo/: config.toml
src-axum/.sqlx/: query-04e1a1276eb5b20082752b1982b5c4e2444f6e13b8cbc04213bd1cab2d968d5c.json  query-3bb2cef034d05379739e3f2e8d20dcbe01892ab4309fe4d47a720659d2a47d44.json  query-453c0187c1623b6aa410df4a37c456f8c747c1bba37a185407bf00a288e195ee.json  query-460afe822b894ba70325ea9c6b14491bc87f8794cf78054be7b82db18e6c76bb.json  query-499aaff80692022d62b556e3372fc20e3ccf5975dd175c6a540eda108a285d77.json  query-53c63c94a2cc400120f2b7ff8212f2e13eb7f14e7d61fb2cc1da499a75b28df5.json  query-570a7f6ed826d23d10e769604ef1feeaf3349dba4d8a2173602c06d1015e9b8c.json  query-65a81e28cbb1bf7f4ac894b7d14b8978fa4c5b2ca86096b49930943c96a82f71.json  query-814d996e26d4589fd8cd50edb489c8a4eab63a132ed3a88b8c4cc7954d0d9258.json  query-898c6161b6e8e864ff347f61bd46c7c109d38598ad647b87af38f0cd0dd8f75e.json  query-a0664fab59bc11eea7d7fdb2cb4a99f4ebe3e3232280a907af5b46c92d9dfbf4.json  query-a1286bcb9353454df39cea5bd58a75adab4037e4078b9f86c4daaf2fdfd8686e.json  query-b264d9befdabc7c0d3be09e6de693ff8a227322307bb113aec587847c2a577d1.json  query-c9b66569fb25657a57bdc6b71b3ba49b9e76bed686f0c2f7b3c5ccfab902d0e5.json  query-ca57c871aa910610119ebddfdac3567c9eca15309e44f517ba3220976d1c72cc.json  query-cc81d3adcca824bca6f6dad8a87bb13e59bfcab4d8e99921f82f36ef42e2d3ab.json  query-d24ff69d5397f894890c2310e328ea0ee48a3614d37355c1a30eae8fbeccd6af.json  query-d603f707693b20521efd13be8126ba87712e00a156e309314a69c7d94d97b6c8.json  query-edf08a43d3872fdcc4ff9827cca0cab22685c9192f977b2e1afdbd634cedc0fa.json  query-f71a86b0fb08a79c40683d69c8ba78fea739ac01163849e1dfc516f6cd240956.json  query-ff1a82727c8c0a36357a78c6d1d98b3d2092b49271dd811523b64970f13a932a.json
src-axum/cert/: cert.pem  key.pem
src-axum/examples/: http_and_https.rs  rustls_reload.rs  rustls_server.rs  rustls_session.rs  sql-demo.sql
src-axum/examples/auth/: main.rs
src-axum/examples/js-websocket-client/: README.md  dev_server.ts  index.html  index.ts  monitor.css  monitor.html  package.json  style.css
src-axum/examples/sqlx-postgres/: Cargo.toml
src-axum/examples/tokio-postgres/: Cargo.toml
src-axum/migrations/: 20250728113110_initial_project.down.sql  20250728113110_initial_project.up.sql
src-axum/src/: main.rs  server.rs
src-axum/src/api/: auth.rs  error.rs  mod.rs  profile.rs  task.rs  validate.rs
src-axum/src/middleware/: auth_check_middleware.rs  mod.rs
src-axum/src/model/: app_state.rs  auth.rs  error.rs  jwt.rs  mod.rs  task.rs
src-axum/src/model/db/: create_delivery_app_user.rs  delete_delivery_app_user.rs  mod.rs  update_delivery_app_user.rs
src-axum/src/model/pg/: address.rs  customer_person.rs  delivery_app_user.rs  delivery_person.rs  delivery_task.rs  error.rs  mod.rs  store.rs  task_address.rs  task_app_user.rs  task_app_user_address.rs  task_person.rs  task_view.rs  user.rs
src-axum/src/model/table/: address.rs  customer_person_table.rs  delivery_app_user.rs  delivery_person.rs  delivery_task.rs  mod.rs  user.rs  user_table.rs
src-axum/src/model/view/: mod.rs  task_view.rs  user_view.rs
src-axum/src/query/: delivery_app_user.rs  delivery_person.rs  delivery_task.rs  mod.rs  query_address.rs  query_task_view.rs  query_user.rs  user.rs
src-axum/src/service/: auth_code_service.rs  auth_init_service.rs  auth_login_service.rs  common.rs  error.rs  mod.rs  profile_update.rs  task_cancel.rs  task_complete.rs  task_create.rs  task_query.rs  task_update.rs
src-axum/src/utils/: crypt.rs  db.rs  error.rs  jwt.rs  mod.rs  runtime.rs  time.rs
src-axum/src/ws/: README.md  check.rs  error.rs  mod.rs  monitor.rs  task_handle.rs
src-axum/src/ws/message/: task.rs
src-axum/tests/: runtime.rs  test0_init_server.rs
src-axum/tests/api/: auth.rs  task.rs
src-axum/tests/db/: common.rs  mod.rs  user.rs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  upload-keystore.jks
src-tauri/capabilities/: default.json
src-tauri/ios/: Info.plist
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: auth.rs
src-tauri/src/core/: error.rs  mod.rs  setup.rs
src-tauri/src/event/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/model/event/: app_started_result.rs  mod.rs
src-tauri/src/model/http/: init_response.rs  mod.rs
src-tauri/src/plugin/: error.rs  http.rs  mod.rs  store.rs
src-tauri/src/util/: mod.rs  normalnize.rs
(+180 files in other folders)
