[package]
name = "src-axum"
version = "0.1.0"
edition = "2024"

[[example]]
name = "auth"
path = "examples/auth/main.rs"
#crate-type = ["staticlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

#[build]
#rustflags = [
#    "-C", "force-unwind-tables=yes",
#    "-C", "debuginfo=2",
#    "-C", "opt-level=0",
#]
#
#[target.'cfg(windows)']
#rustflags = ["-C", "link-arg=/DEBUG:FULL"]


[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
serial_test = "3.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "time", "chrono"] }

# json
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
serde_with = "3"
strum_macros = "0.27.1"
uuid = {version = "1.17.0", features = ["serde", "v4","fast-rng",]}
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
num_cpus = "1.17.0"
blake3 = "1.8.2"
argon2 = "0.5.3"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }

validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"


[dev-dependencies]
futures = "0.3.29"
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace"] }

