[package]
name = "src-axum"
version = "0.1.0"
edition = "2024"

[[example]]
name = "auth"
path = "examples/auth/main.rs"
#crate-type = ["staticlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

#[build]
#rustflags = [
#    "-C", "force-unwind-tables=yes",
#    "-C", "debuginfo=2",
#    "-C", "opt-level=0",
#]
#
#[target.'cfg(windows)']
#rustflags = ["-C", "link-arg=/DEBUG:FULL"]


[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws", "macros", "http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = {  version = "0.7.2", features = ["tls-rustls"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
serial_test = "3.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "chrono"] }

fake = { version = "4", features = ["derive"] }

# json
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
strum_macros = "0.27.1"
uuid = {version = "1.17.0", features = ["serde", "v4","fast-rng",]}
sqlx = { version = "0.8.6", default-features = false, features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros", "derive", "bigdecimal" ] }
num_cpus = "1.17.0"
blake3 = "1.8.2"
argon2 = "0.5.3"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }

validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"

tower-http = { version = "0.6.6", features = ["trace", "cors"] }
rustls = "0.23.29"
bigdecimal = { version = "0.4.8", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }

futures = "0.3.29"

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

