[package]
name = "paotui"
version = "0.0.0"
description = "A simple Rust app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-notification = "2.3.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-geolocation = "2.2.5"
tauri-plugin-shell = "2.3.0"
