[package]
name = "paotui"
version = "0.0.0"
description = "A simple Rust app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.tauri.bundle]
identifier = "com.paotui.delivery"

# The binary target for desktop builds
[[bin]]
name = "paotui"
path = "src/main.rs"

# The library target for mobile builds  
[lib]
name = "paotui_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-notification = "2.2.3"
tauri-plugin-fs = "2.3.0"
tauri-plugin-geolocation = "2.2.5"
tauri-plugin-shell = "2.2.2"
