[package]
name = "src-tauri"
version = "0.1.0"
description = "A simple Rust app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[profile.dev]
debug = true  # 必须启用


[package.metadata.tauri.bundle]
identifier = "com.paotui.delivery"

# The binary target for desktop builds
[[bin]]
name = "paotui"
path = "src/main.rs"

# The library target for mobile builds  
[lib]
name = "paotui_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-geolocation = "2.3"
tauri-plugin-shell = "2.2.2"
tauri-plugin-websocket = "2"
tauri-plugin-txmap = { path = "../plugins/tauri-plugin-txmap"}

tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
log = "0.4.27"
anyhow = "1.0.98"
thiserror = "2.0.12"
itertools = "0.14.0"

[dev-dependencies]
