[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
pingora = { version = "0.5.0", features = ["lb"] }
clap = { version = "3.2.25", features = ["derive"] }
log = "0.4.27"
tokio = "1.46.1"
pingora-core = "0.5.0"
pingora-proxy = "0.5.0"
env_logger = "0.11.8"
