[package]
name = "example-testing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.98"

reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
