[package]
name = "tauri-plugin-txmap"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-txmap"

[dependencies]
tauri = { version = "2.6.2" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0"
specta = { version = "^2.0.0-rc.22", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[features]
specta = ["dep:specta", "tauri/specta"]